# stdexec

examples/: CMakeLists.txt  scan.cpp
examples/tbbexec/: CMakeLists.txt  scan.cpp
